k8s/master/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mynginx
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "test.bettercodelab.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mynginx
                port:
                  number: 80
