k8s/master/ingress-mysql.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mysql
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/server-alias: mysql.bettercodelab.com
spec:
  ingressClassName: "nginx"
  rules:
    - host: "mysql.bettercodelab.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mysql
                port:
                  number: 3306
